updated 2-guessing-game 2019-05-16

--- a/2-guessing-game/Cargo.toml
+++ b/2-guessing-game/Cargo.toml
@@ -2,6 +2,7 @@
 name = "guessing-game"
 version = "0.1.0"
 authors = ["Chaim-Leib Halbert <chaim.leib.halbert@gmail.com>"]
+edition = "2018"
 
 [dependencies]
-rand = "0.3.18"
+rand = "0.6.5"
