hello_cargo: edition 2021

--- a/1-hello-world/hello_cargo/Cargo.toml
+++ b/1-hello-world/hello_cargo/Cargo.toml
@@ -2,5 +2,6 @@
 name = "hello_cargo"
 version = "0.1.0"
 authors = ["Chaim-Leib Halbert <chaim.leib.halbert@gmail.com>"]
+edition = "2021"
 
 [dependencies]
